--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -20,13 +20,14 @@
         android:padding="10sp"
         android:background="#fff">
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/userid"
             android:textColorHint="#888"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="请输入您的姓名"
+            android:hint="请输入您的工号"
+            android:text="99"
             android:background="@null"
             android:padding="5.0dip"
             android:paddingEnd="40dp"
@@ -49,6 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="请输入您的密码"
+            android:text="123"
             android:background="@null"
             android:textColorHint="#888"
             android:inputType="textPassword"
