1.从服务器获取到的经纬度为GPS设备原始经纬度，将其由app转换为百度经纬度 2.添加左侧侧边栏的用户信息展示用户权限

--- a/app/src/main/res/layout/setting_layout.xml
+++ b/app/src/main/res/layout/setting_layout.xml
@@ -5,43 +5,89 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true">
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:background="#999">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#999"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/rl_profile"
+            android:layout_width="250dp"
+            android:layout_height="200dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/protrait_background">
+
+            <ImageView
+                android:id="@+id/iv_portrait"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="55dp"
+                android:layout_marginTop="45dp"
+                android:src="@drawable/login_head"/>
+
+            <TextView
+                android:id="@+id/tv_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="55dp"
+                android:layout_toRightOf="@id/iv_portrait"
+                android:text="abc"
+                android:textColor="@color/alivc_color_action_list_dialog_background"
+                android:textSize="24sp"/>
+
+            <TextView
+                android:id="@+id/tv_user_msg"
+                android:layout_width="250dp"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/iv_portrait"
+                android:singleLine="false"
+                android:text="asdkhjakdhsakjdasdhbasadasd"
+                android:textColor="@color/alivc_gesture_text_color"/>
+
+        </RelativeLayout>
+
 
         <ListView
             android:id="@+id/list_one"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_above="@id/btn_map_normal"
-            android:layout_alignParentTop="true"/>
+            android:layout_below="@id/rl_profile"/>
+
         <Button
             android:id="@+id/btn_map_normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="普通地图"
-            android:layout_above="@id/btn_map_traffic" />
+            android:layout_above="@+id/btn_map_traffic"
+            android:layout_toRightOf="@id/btn_map_satellite"
+            android:text="普通地图"/>
+
         <Button
             android:id="@+id/btn_map_traffic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="交通地图"
-            android:layout_above="@id/btn_map_satellite" />
+            android:layout_alignParentBottom="true"
+            android:text="交通地图"/>
+
         <Button
             android:id="@+id/btn_map_satellite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@id/exit"
-            android:text="卫星地图" />
+            android:text="卫星地图"/>
 
         <Button
             android:id="@+id/exit"
-            android:text="退出账号"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@id/btn_map_traffic"
+            android:text="退出账号"/>
+
     </RelativeLayout>
 
 </ScrollView>
