不知道为啥不能播放本地视频，准备回退一次

--- a/app/src/main/res/layout/change_psw.xml
+++ b/app/src/main/res/layout/change_psw.xml
@@ -21,6 +21,7 @@
         <EditText
             android:id="@+id/userid"
             android:layout_width="160dp"
+            android:inputType="number"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#fff"
