--- a/app/src/main/res/layout/alivc_view_control.xml
+++ b/app/src/main/res/layout/alivc_view_control.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="@dimen/alivc_titlebar_title_left_margin"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:maxLines="1"
+            android:singleLine="true"
             android:textColor="@color/alivc_white"
             android:textSize="@dimen/alivc_titlebar_font_size" />
 
