添加了app更新功能 并考虑到app应该是进入主界面后自动检索更新，若不需更新或用户选择了忽略则不弹出任何界面。否则弹出更新窗口。主要使用Xupdate框架。 另外，在左侧边栏添加检查更新按钮，无论当前版本是否为最新版本，都需要toast提示用户以增加用户操作性。主要实现逻辑是在MyApp类添加boolean值以判断是否弹出toast，并在主界面、按钮分别设置该boolean值。

--- a/app/src/main/res/layout/setting_layout.xml
+++ b/app/src/main/res/layout/setting_layout.xml
@@ -59,9 +59,15 @@
     <RelativeLayout
         android:id="@+id/rl_button_group"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         android:layout_alignParentBottom="true">
 
+        <Button
+            android:id="@+id/btn_update_now"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/btn_map_normal"
+            android:text="检查更新"/>
         <Button
             android:id="@+id/btn_map_normal"
             android:layout_width="wrap_content"
